OPENCAST-1345: ability to ingest recordings, various other changes

--- a/public/index.html
+++ b/public/index.html
@@ -40,8 +40,8 @@
       <label class="viewToggle" for="toggleRecordingView" data-total data-name="recordings">Live recordings</label>
       <label class="viewToggle" for="toggleUpcomingView" data-total data-name="upcoming">CA checks</label>
       <label class="viewToggle" for="toggleCompletedView" data-total data-name="completed">Completed</label>
-      <button id="caCheck" class="btn info pull-right"></button>
-      <button id="recCheck" class="btn success pull-right">Compare recordings against server</button>
+      <button id="caCheck" class="btn info pull-right checkButton"></button>
+      <button id="recCheck" class="btn success pull-right checkButton"></button>
     </div>
     <section class="view">
       <ul id="recording">
