OPENCAST-2429: starting implementing logging.

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     </p>
   </div>
   <input class="toggleCover hidden" id="adhocRecordingToggle" type="checkbox" autocomplete="off" />
-  <div class="modal" id="dhocRecordingModal">
+  <div class="modal" id="adhocRecordingModal">
     <label class="close" for="adhocRecordingToggle" title="Close modal"></label>
     <h2>Start ad-hoc recording</h2>
     <p><span>Venue</span><span
