--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
   <main>
     <header>
       <a href="https://media.uct.ac.za/">Admin Login</a
-      ><a href="http://camonitor.uct.ac.za:3000/" target="_blank">IP Cameras</a
+      ><a href="http://camonitor.uct.ac.za/ip-cam/" target="_blank">IP Cameras</a
       ><a href="http://camonitor.uct.ac.za/ls/ls-status.txt" target="_blank">Lecturesight</a
       ><a href="http://camonitor.uct.ac.za/lecturesight/overview/" target="_blank">LS Overview</a
       ><a href="https://media.uct.ac.za/mrtg/clock/" target="_blank">Clock</a
