--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
     <header>
       <a href="https://media.uct.ac.za/">Admin Login</a
       ><a href="http://camonitor.uct.ac.za/ip-cam/" target="_blank">IP Cameras</a
-      ><a href="http://camonitor.uct.ac.za/ls/ls-status.txt" target="_blank">Lecturesight</a
+      ><a href="http://camonitor.uct.ac.za/ls/ls-status" target="_blank">Lecturesight</a
       ><a href="http://camonitor.uct.ac.za/lecturesight/overview/" target="_blank">LS Overview</a
       ><a href="https://media.uct.ac.za/mrtg/clock/" target="_blank">Clock</a
       ><a href="https://camonitor.uct.ac.za/audio/">Audio monitoring</a
