Remove hard coded venues

--- a/public/index.html
+++ b/public/index.html
@@ -21,14 +21,11 @@
   <div class="modal" id="dhocRecordingModal">
     <label class="close" for="adhocRecordingToggle" title="Close modal"></label>
     <h2>Start ad-hoc recording</h2>
-    <p><span>Venue</span><span
-      >
+    <p>
+      <span>Venue</span>
+      <span>
         <select>
           <option value="">--Choose capture agent--</option>
-          <option value="clinskills1">GSH Clinical Skills Lab 1</option>
-          <option value="clinskills2">GSH Clinical Skills Lab 2</option>
-          <option value="clinskills3">GSH Clinical Skills Lab 3</option>
-          <option value="clinskills4">GSH Clinical Skills Lab 4</option>
         </select>
       </span>
     </p>
