--- a/public/index.html
+++ b/public/index.html
@@ -21,14 +21,11 @@
   <div class="modal" id="dhocRecordingModal">
     <label class="close" for="adhocRecordingToggle" title="Close modal"></label>
     <h2>Start ad-hoc recording</h2>
-    <p><span>Venue</span><span
-      >
+    <p>
+      <span>Venue</span>
+      <span>
         <select>
           <option value="">--Choose capture agent--</option>
-          <option value="clinskills1">GSH Clinical Skills Lab 1</option>
-          <option value="clinskills2">GSH Clinical Skills Lab 2</option>
-          <option value="clinskills3">GSH Clinical Skills Lab 3</option>
-          <option value="clinskills4">GSH Clinical Skills Lab 4</option>
         </select>
       </span>
     </p>
@@ -43,15 +40,15 @@
   <main>
     <header>
       <a href="https://media.uct.ac.za/">Admin Login</a
-      ><a href="http://camonitor.uct.ac.za:3000/" target="_blank">IP Cameras</a
-      ><a href="http://camonitor.uct.ac.za/ls/ls-status.txt" target="_blank">Lecturesight</a
-      ><a href="http://camonitor.uct.ac.za/lecturesight/overview/" target="_blank">LS Overview</a
+      ><a href="https://camonitor.uct.ac.za/ip-cam/" target="_blank">IP Cameras</a
+      ><a href="https://camonitor.uct.ac.za/ls-status" target="_blank">Lecturesight</a
+      ><a href="https://camonitor.uct.ac.za/lecturesight/overview/" target="_blank">LS Overview</a
       ><a href="https://media.uct.ac.za/mrtg/clock/" target="_blank">Clock</a
       ><a href="https://camonitor.uct.ac.za/audio/">Audio monitoring</a
       ><a href="https://media.uct.ac.za/mrtg/dashboard/stats.html">Opencast Stats</a
       ><a href="https://media.uct.ac.za/mrtg/dashboard/stats.html?state=error">Opencast Failures</a
       ><a href="https://media.uct.ac.za/mrtg/rpi/" target="_blank">RPis</a
-      ><a href="http://srvwinweb001.wf.uct.ac.za/SPlusTTable/Venues.aspx?AcadYear=2016" target="_blank">Venue Timetable</a>
+      ><a href="https://srvwinweb001.wf.uct.ac.za/SPlusTTable/Venues.aspx?AcadYear=2016" target="_blank">Venue Timetable</a>
     </header>
     <h1>Fallback recorder</h1>
     <input type="radio" name="view" id="toggleRecordingView" checked />
